# jisi-code

./: .gitignore  Cargo.toml  agents.toml
crates/agent-orchestrator/: Cargo.toml  README.md
crates/agent-orchestrator/src/: config.rs  error.rs  events.rs  lib.rs  orchestrator.rs
crates/agent-orchestrator/src/executor/: claude_sdk.rs  codex.rs  mod.rs  opencode.rs
crates/agent-orchestrator/src/executor/acp/: client.rs  mod.rs  process.rs  protocol.rs
crates/agent-orchestrator/src/session/: manager.rs  mod.rs
crates/agent-orchestrator/src/ws_api/: adapter.rs  handler.rs  mod.rs  protocol.rs
crates/agent-orchestrator/tests/: integration.rs
crates/agent-orchestrator/tests/common/: mod.rs
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/domain/: agent_executor.rs  difficulty.rs  error.rs  ids.rs  language.rs  mail_router.rs  mailbox.rs  mod.rs  score.rs  submission_status.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260214_170000_init_schema.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  main.rs
crates/server/src/api/: filesystem.rs  mod.rs  state.rs  ws.rs
crates/server/src/entity/: problem.rs  submission.rs  user.rs
crates/server/src/repository/: mod.rs  problem_repository.rs  submission_repository.rs  user_repository.rs
crates/system-capabilities/: Cargo.toml
crates/system-capabilities/src/: filesystem.rs  lib.rs
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: routes.ts
frontend/app/components/: chat-panel.tsx  directory-picker.tsx  message-renderer.tsx  model-selector.tsx  sidebar.tsx  token-usage-display.tsx  websocket-provider.tsx
frontend/app/hooks/: use-websocket.ts
frontend/app/layouts/: app-layout.tsx
frontend/app/routes/: home.tsx
frontend/app/stores/: session-store.ts
frontend/app/types/: filesystem.ts  websocket.ts
scripts/: mock-acp-agent.cjs
