[package]
name = "agent-orchestrator"
version = "0.1.0"
edition = "2024"

[features]
default = []
ws-api = ["axum", "tower", "tower-http", "futures-util"]

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
toml = "0.8"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
axum = { version = "0.8", optional = true, features = ["ws"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
tokio-test = "0.4"
