[package]
name = "jisi-code-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
jisi-code-api-types = { path = "../api-types" }
jisi-code-core = { path = "../core" }
jisi-code-migration = { path = "../migration" }
async-trait = "0.1"
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
