[package]
name = "jisi-code-server"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-orchestrator = { path = "../agent-orchestrator", features = ["ws-api"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
