[package]
name = "system-capabilities"
version = "0.1.0"
edition = "2024"
description = "System capabilities for AI coding platform"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
walkdir = "2.5"
glob = "0.3"
ignore = "0.4"
dirs = "6.0"

[features]
default = []
filesystem = []
